--- a/tfg-frontend/src/main/resources/templates/home.html
+++ b/tfg-frontend/src/main/resources/templates/home.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,27 +47,43 @@
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="/img/test_img.png" class="d-block w-100" alt="...">
+            <a th:href="@{/frontend/info}"><img src="/img/test_img.png" class="d-block w-100 vh-100" alt="..."></a>
             <div class="carousel-caption d-none d-md-block">
-                <h5>Lorem ipsum dolor</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam porta.</p>
+                <h5>¿Quiénes Somos?</h5>
+                <p>Más información acerca de FunFun.</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img src="/img/test_img.png" class="d-block w-100" alt="...">
+            <a th:href="@{/frontend/datosReserva}"><img src="/img/test_img.png" class="d-block w-100 vh-100" alt="..."></a>
             <div class="carousel-caption d-none d-md-block">
-                <h5>Lorem ipsum dolor</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam porta.</p>
+                <h5>Reservar</h5>
+                <p>Haz tu reserva para disfrutar con nosotros.</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img src="/img/test_img.png" class="d-block w-100" alt="...">
+            <a th:href="@{/frontend/verReserva}"><img src="/img/test_img.png" class="d-block w-100 vh-100" alt="..."></a>
             <div class="carousel-caption d-none d-md-block">
-                <h5>Lorem ipsum dolor</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam porta.</p>
+                <h5>Ver reservas</h5>
+                <p>Ve tus reservas actuales.</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <a th:href="@{/frontend/credencialesTarjetaCliente}"><img src="/img/card_img.jpg" class="d-block w-100 vh-100" alt="..."></a>
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Ver Tarjeta</h5>
+                <p>Ve la información de tu tarjeta y recarga su saldo.</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <a th:href="@{/frontend/miembroclub}"><img src="/img/test_img.png" class="d-block w-100 vh-100" alt="..."></a>
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Club Fun</h5>
+                <p>Apúntate al Club Fun y recibe ofertas en tu correo.</p>
             </div>
         </div>
     </div>
