--- a/tfg-frontend/src/main/resources/templates/paginas/actividadesReserva.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/actividadesReserva.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +43,7 @@
     </div>
 </nav>
 <div th:if="${!actividadesElegidas.isEmpty()}">
-<h1 >Reserva actual</h1>
+<h1 class="text-center">Reserva actual</h1>
     <table class="table table-hover">
         <thead class="thead-light">
         <tr>
@@ -65,15 +65,31 @@
     <p th:text="${precioTotal}"></p>
     <a th:href="@{/frontend/guardarActividades}" th:text="'guardar y pasar a datos de contacto'" class="btn btn-success" role="button" title="terminar reserva."></a>
 </div>
-<h1>Atracciones y sesiones</h1>
-<div th:each="atraccion : ${sesionesPorAtraccion}">
-    <h2 th:text="${atraccion.key.getNombre()}  + ':' +  ${atraccion.key.getPrecio()}"></h2>
-    <p th:if="${atraccion.value.isEmpty()}">No hay sesiones disponibles para esta actividad, prueba a cambiar el número de personas o la fecha de reserva.</p>
-    <ul class="list-group list-group-horizontal" th:if="${!atraccion.value.isEmpty()}">
-        <li class="list-group-item" th:each="sesion : ${atraccion.value}">
-            <a th:href="@{'/frontend/addActividad/hora=' + ${sesion} + '/atraccion=' + ${atraccion.key.getId()} }"><span th:text="${sesion}"></span></a>
-        </li>
-    </ul>
+<h1 class="text-center">Atracciones y sesiones</h1>
+<div class="card-group">
+    <div th:each="atraccion : ${sesionesPorAtraccion}" class="w-25">
+        <div class="card text-center">
+            <div class="card-body">
+                <h5 class="card-title" th:text="${atraccion.key.getNombre()}"></h5>
+                <h6 class="card-subtitle mb-2 text-body-secondary" th:text="'Precio por persona: ' + ${atraccion.key.getPrecio()}"></h6>
+                <p th:if="${atraccion.value.isEmpty()}">No hay sesiones disponibles para esta actividad, prueba a cambiar el número de personas o la fecha de reserva.</p>
+                <!--<ul class="list-group list-group-horizontal" th:if="${!atraccion.value.isEmpty()}">
+                    <li class="list-group-item border-0" th:each="sesion : ${atraccion.value}">
+                        <a class="btn btn-primary" th:href="@{'/frontend/addActividad/hora=' + ${sesion} + '/atraccion=' + ${atraccion.key.getId()} }"><span th:text="${sesion}"></span></a>
+                    </li>
+                </ul>-->
+                <div class="list-group list-group-horizontal">
+                    <div class="row">
+                        <!-- Iterar sobre tu lista de botones generados con Thymeleaf -->
+                        <div class="col-4 mb-1" th:each="sesion : ${atraccion.value}">
+                            <!-- Utilizar los valores de Thymeleaf para generar los botones -->
+                            <a class="btn btn-primary" th:href="@{'/frontend/addActividad/hora=' + ${sesion} + '/atraccion=' + ${atraccion.key.getId()} }"><span th:text="${sesion}"></span></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <a class="btn btn-primary" th:href="@{/frontend/volverAtrasDatosReserva}" onclick="return confirm('Volver atrás te permitirá cambiar el número de personas, local y/o fecha de la reserva, pero perderás tu lista de actividades. ¿Quieres volver atrás?')">Volver atrás</a>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
