--- a/tfg-frontend/src/main/resources/templates/paginas/datosReserva.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/datosReserva.html
@@ -22,10 +22,10 @@
                     <a class="nav-link" th:href="@{/frontend/info}">¿Quiénes Somos?</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/frontend/datosReserva}">Reservar</a>
+                    <a class="nav-link active" th:href="@{/frontend/datosReserva}">Reservar</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" th:href="@{/frontend/verReserva}">Ver reservas</a>
+                    <a class="nav-link" th:href="@{/frontend/verReserva}">Ver reservas</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/frontend/credencialesTarjetaCliente}">Ver Tarjeta</a>
@@ -42,27 +42,35 @@
         </div>
     </div>
 </nav>
-    <form th:action="@{/frontend/cargarActividades}" method="post" >
-        <div th:if="${msg != null}" class="alert alert-danger" role="alert">
-            <span th:text="${msg}"></span>
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <div class="card my-5">
+                <form th:action="@{/frontend/cargarActividades}" method="post" class="card-body cardbody-color p-lg-5">
+                    <div th:if="${msg != null}" class="alert alert-danger" role="alert">
+                        <span th:text="${msg}"></span>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    <div class="mb-3">
+                        <label for="numeroPersonasReserva" class="form-label">Número de personas</label>
+                        <input type="number" class="form-control" id="numeroPersonasReserva" name="personasReserva" min="1" value="1" step="1">
+                    </div>
+                    <div class="mb-3">
+                        <label for="locales">Selecciona un local:</label>
+                        <select id="locales" name="local">
+                            <option th:each="sitio : ${sitios}" th:value="${sitio.getId()}" th:text="${sitio.getCalle()} + ', ' + ${sitio.getCiudad()} + ' (' + ${sitio.getProvincia()} + ')' "></option>
+                        </select>
+                    </div>
+                    <div class="mb-3">
+                        <label for="fechaDeReserva" class="form-label">Fecha de la reserva</label>
+                        <input type="date" class="form-control" id="fechaDeReserva" name="fechaReserva" th:min="${fechaActual}" th:value="${fechaActual}">
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-block mb-5 w-100">Comprobar actividades</button>
+                </form>
+            </div>
         </div>
-        <div class="mb-3">
-            <label for="numeroPersonasReserva" class="form-label">Número de personas</label>
-            <input type="number" class="form-control" id="numeroPersonasReserva" name="personasReserva" min="1" value="1" step="1">
-        </div>
-        <div class="mb-3">
-            <label for="locales">Selecciona un local:</label>
-            <select id="locales" name="local">
-                <option th:each="sitio : ${sitios}" th:value="${sitio.getId()}" th:text="${sitio.getCalle()}"></option>
-            </select>
-        </div>
-        <div class="mb-3">
-            <label for="fechaDeReserva" class="form-label">Fecha de la reserva</label>
-            <input type="date" class="form-control" id="fechaDeReserva" name="fechaReserva" th:min="${fechaActual}" th:value="${fechaActual}">
-        </div>
-        <button type="submit" class="btn btn-primary">Comprobar actividades</button>
-    </form>
+    </div>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
