--- a/tfg-frontend/src/main/resources/templates/paginas/infoEmpresa.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/infoEmpresa.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,6 +42,27 @@
         </div>
     </div>
 </nav>
+<div class="container mt-5">
+    <h1 class="text-center mb-4">¿Quiénes Somos?</h1>
+    <p>Somos una empresa apasionada por crear momentos de diversión y felicidad para familias como la tuya. Desde nuestros humildes comienzos, nos hemos comprometido a proporcionar experiencias inolvidables y emocionantes para todas las edades.</p>
+
+    <h2>Nuestra Misión</h2>
+    <p>En FunFun, creemos en la importancia de la conexión familiar y en el poder de la diversión para fortalecer esos lazos. Nuestra misión es ofrecer un espacio seguro, emocionante y acogedor donde padres e hijos puedan compartir risas, aventuras y recuerdos duraderos.</p>
+
+    <h2>Nuestra Experiencia</h2>
+    <p>Con años de experiencia en la industria del entretenimiento familiar, hemos perfeccionado cada detalle de nuestros centros recreativos para garantizar una experiencia excepcional para nuestros visitantes. Desde emocionantes atracciones hasta juegos interactivos y deliciosas opciones gastronómicas, cada aspecto de FunFun ha sido diseñado para inspirar alegría y diversión.</p>
+
+    <h2>Compromiso con la Calidad</h2>
+    <p>En FunFun, la calidad es nuestra máxima prioridad. Nos esforzamos por ofrecer instalaciones impecables, personal amable y un ambiente limpio y seguro en cada uno de nuestros centros. Desde la selección de los mejores proveedores hasta la capacitación continua de nuestro equipo, nos comprometemos a superar tus expectativas en cada visita.</p>
+
+    <h2>Nuestra Comunidad</h2>
+    <p>Nos enorgullece ser parte de la comunidad local y nos comprometemos a devolver el apoyo que recibimos. Colaboramos con organizaciones benéficas, escuelas y grupos comunitarios para promover el bienestar y la diversión en nuestra área.</p>
+
+    <h2>Únete a la Diversión</h2>
+    <p>Ya sea que estés planeando una excursión familiar, una fiesta de cumpleaños o simplemente quieras pasar un día inolvidable con tus seres queridos, ¡te invitamos a unirte a la diversión en FunFun! Esperamos verte pronto en uno de nuestros centros recreativos en toda España.</p>
+
+    <p class="text-center">¡La diversión nunca termina en FunFun!</p>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
