--- a/tfg-frontend/src/main/resources/templates/paginas/inicioSesionEmpleado.html
+++ b/tfg-frontend/src/main/resources/templates/paginas/inicioSesionEmpleado.html
@@ -6,23 +6,29 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
-<body class="d-flex align-items-center py-4 bg-body-tertiary">
+<body>
 <div class="container">
-    <form th:action="@{/frontend/comprobarEmpleado}" method="post">
-        <div th:if="${msg != null}" class="alert alert-danger" role="alert">
-            <span th:text="${msg}"></span>
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <div class="card my-5">
+                <form th:action="@{/frontend/comprobarEmpleado}" method="post" class="card-body cardbody-color p-lg-5">
+                    <div th:if="${msg != null}" class="alert alert-danger" role="alert">
+                        <span th:text="${msg}"></span>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    <div class="mb-3">
+                        <label for="emailEmpleado" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="emailEmpleado" name="correoEmpleado" placeholder="Introduce tu correo de la empresa" required>
+                    </div>
+                    <div class="form-outline mb-4">
+                        <label for="passwordEmpleado" class="form-label">Contraseña</label>
+                        <input type="password" class="form-control" id="passwordEmpleado" name="passwordEmpleado" placeholder="Introduce tu contraseña" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-block mb-5 w-100">Iniciar Sesión</button>
+                </form>
+            </div>
         </div>
-        <div class="form-outline mb-4">
-            <label for="emailEmpleado" class="form-label">Email</label>
-            <input type="email" class="form-control" id="emailEmpleado" name="correoEmpleado" placeholder="Introduce tu correo de la empresa" required>
-        </div>
-        <div class="form-outline mb-4">
-            <label for="passwordEmpleado" class="form-label">Contraseña</label>
-            <input type="password" class="form-control" id="passwordEmpleado" name="passwordEmpleado" placeholder="Introduce tu contraseña" required>
-        </div>
-        <button type="submit" class="btn btn-primary btn-block mb-4">Iniciar Sesión</button>
-    </form>
+    </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
